// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input should not propagate specific properties to the HTML5 element 1`] = `
<form
  noValidate={true}
  onSubmit={[Function]}
>
  <input
    className="foo"
    id="name"
    name="name"
    onChange={[Function]}
    type="text"
    value=""
  />
</form>
`;

exports[`Input should not propagate specific properties, like converter, to the HTML5 element 1`] = `
<form
  noValidate={true}
  onSubmit={[Function]}
>
  <input
    className="foo"
    id="name"
    name="name"
    onChange={[Function]}
    type="text"
    value=""
  />
</form>
`;

exports[`Input should render a validation error 1`] = `
<form
  noValidate={true}
  onSubmit={[Function]}
>
  <input
    id="name"
    name="name"
    onChange={[Function]}
    required={true}
    type="text"
    value=""
  />
</form>
`;

exports[`Input should render correctly with type=text 1`] = `
<form
  noValidate={true}
  onSubmit={[Function]}
>
  <input
    className="foo"
    id="name"
    name="name"
    onChange={[Function]}
    required={true}
    type="text"
    value="foobar"
  />
</form>
`;

exports[`Input should render type=radio 1`] = `
<form
  noValidate={true}
  onSubmit={[Function]}
>
  <input
    checked={true}
    id="abtesting"
    name="abtesting"
    onChange={[Function]}
    type="radio"
    value="a"
  />
  <input
    checked={false}
    id="abtesting"
    name="abtesting"
    onChange={[Function]}
    type="radio"
    value="b"
  />
</form>
`;

exports[`Input should use checked instead of value with type=checkbox 1`] = `
<form
  noValidate={true}
  onSubmit={[Function]}
>
  <input
    checked={true}
    id="subscribed"
    name="subscribed"
    onChange={[Function]}
    type="checkbox"
  />
</form>
`;
